<?xml version="1.0" encoding="utf-8"?><!--
  ~ VoIP.ms SMS
  ~ Copyright (C) 2018-2021 Michael Kourlas
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- F-Droid override of the shared synchronization screen: identical to the
     main version, plus a UnifiedPush section (relay URL + registration secret).
     Placed here because the in-app Notifications screen is redirected to the
     Android system settings on Android 8+. -->
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.ListPreference
        android:defaultValue="@string/preferences_sync_interval_default_value"
        android:entries="@array/preferences_sync_interval_entries"
        android:entryValues="@array/preferences_sync_interval_values"
        android:icon="@android:color/transparent"
        android:key="@string/preferences_sync_interval_key"
        android:title="@string/preferences_sync_interval_title" />
    <androidx.preference.Preference
        android:icon="@android:color/transparent"
        android:key="@string/preferences_sync_start_date_key"
        android:title="@string/preferences_sync_start_date_title" />
    <androidx.preference.SwitchPreference
        android:defaultValue="@string/preferences_sync_retrieve_only_recent_messages_default_value"
        android:icon="@android:color/transparent"
        android:key="@string/preferences_sync_retrieve_only_recent_messages_key"
        android:summary="@string/preferences_sync_retrieve_only_recent_messages_summary"
        android:title="@string/preferences_sync_retrieve_only_recent_messages_title" />
    <androidx.preference.SwitchPreference
        android:defaultValue="@string/preferences_sync_retrieve_deleted_messages_default_value"
        android:icon="@android:color/transparent"
        android:key="@string/preferences_sync_retrieve_deleted_messages_key"
        android:summary="@string/preferences_sync_retrieve_deleted_messages_summary"
        android:title="@string/preferences_sync_retrieve_deleted_messages_title" />
    <androidx.preference.SwitchPreference
        android:defaultValue="@string/preferences_sync_auto_download_mms_images_default_value"
        android:icon="@android:color/transparent"
        android:key="@string/preferences_sync_auto_download_mms_images_key"
        android:summary="@string/preferences_sync_auto_download_mms_images_summary"
        android:title="@string/preferences_sync_auto_download_mms_images_title" />
    <androidx.preference.SwitchPreference
        android:defaultValue="@string/preferences_sync_auto_download_contacts_only_default_value"
        android:dependency="@string/preferences_sync_auto_download_mms_images_key"
        android:icon="@android:color/transparent"
        android:key="@string/preferences_sync_auto_download_contacts_only_key"
        android:summary="@string/preferences_sync_auto_download_contacts_only_summary"
        android:title="@string/preferences_sync_auto_download_contacts_only_title" />

    <androidx.preference.PreferenceCategory
        android:title="@string/preferences_unifiedpush_category_title">
        <androidx.preference.EditTextPreference
            android:icon="@android:color/transparent"
            android:key="@string/preferences_unifiedpush_relay_url_key"
            android:title="@string/preferences_unifiedpush_relay_url_title"
            android:dialogTitle="@string/preferences_unifiedpush_relay_url_title"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.EditTextPreference
            android:icon="@android:color/transparent"
            android:key="@string/preferences_unifiedpush_relay_secret_key"
            android:persistent="false"
            android:title="@string/preferences_unifiedpush_relay_secret_title"
            android:dialogTitle="@string/preferences_unifiedpush_relay_secret_title"
            android:summary="@string/preferences_unifiedpush_relay_secret_summary" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
